--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 </head>
 <body>
     <h1>Exercice supplementire Javascript</h1>
-    <!--?EXO1-->
+    <h2 class="sub">Base 1</h2>
+    <!--?*EXO1-->
     <h2>Exercice 1</h2>
         <p>Définir une variable et l'afficher dans une boîte de dialogue.</p>
             <button id="run">Appuyer pour voir la viriable</button>
-    <!--?EXO2-->
+    <!--?*EXO2-->
     <h2>Exercice 2</h2>
         <p>Définir trois variables : nom, prenom et ville. Les afficher comme sur l'image correspondant à l'exercice.</p>
             <button id="run1">Start !</button>
-    <!--?EXO3-->
+    <!--?*EXO3-->
     <h2>Exercice 3</h2>
         <p>Afficher une boîte de dialogue permettant de saisir son prénom. Afficher dans une boîte de dialogue "Bonjour, " suivi du prénom saisi.</p>
             <button id="run2">Dite-vous Bonjour</button>
-    <!--?EXO4-->
+    <!--?*EXO4-->
     <h2>Exercice 4</h2>
         <p>Refaire l’exercice 2 en demandant le nom, le prénom et la ville à l’utilisateur.</p>
         <form>
@@ -30,7 +31,7 @@
                 <label for="ville">Ville : </label><input type="text" name="ville" id="ville"/>
                 <button  name="valider" id="valider">Valider</button>
             </form>
-    <!--?EXO5-->
+    <!--?*EXO5-->
     <h2>Exercice 5</h2>
         <p>Demander à l’utilisateur deux nombres à virgule. Ne garder que la partie entière du premier .</p>
         <p>Les multiplier et afficher le résultat dans une boîte de dialogue.</p>
@@ -49,7 +50,7 @@
             <label for="Deuxieme_nombre">Deuxième nombre : </label><input type="text" id="Deuxieme_nombre" name="Deuxieme_nombre"/>
                 <button id="valider2" name="valider2">Valider</button>
             </form>
-    <!--?EXO7-->
+    <!--?*EXO7-->
     <h2>Exercice 7</h2>
         <p>Demander à l’utilisateur sa pointure et son année de naissance. Créer une fonction qui fait les calculs suivants :</p>
             <ol>
@@ -65,13 +66,15 @@
                 <label for="annee">Année de naissance : </label><input type="text" id="annee" name="annee"/>
                 <button id="valider3" name="valider3">Valider</button>
             </form>
-    <!--?EXO8-->
+    <!--?*EXO8-->
     <h2>Exercice 8</h2>
         <p>Demander à l’utilisateur de saisir son âge. S’il a plus de 18 ans, afficher " Vous êtes majeur ". Sinon afficher " Vous êtes mineur ".</p>
             <form>
                 <label for="age">Votre âge : </label><input type="text" id="age" name="age"/>
                 <button id="valider4" name="valider4">Valider</button>
             </form>
+    <!--?*FOR NEXT BASE-->
+    <h1><a href="./index_base2.html">Next lvl</a></h1>
     <script src="assets/Js/Funct.js"></script>
     <script src="assets/Js/script.js"></script>
 </body>
