--- a/index_base2.html
+++ b/index_base2.html
@@ -18,11 +18,44 @@
     <!--?*Exo 2-->
     <h2>Exercice 2 - écriture d'une fonction renvoyant une valeur</h2>
         <p>Créer une fonction qui :</p>
-            <ol>
+            <ul>
                 <li>demande la saisie d'un rayon;</li>
                 <li>retourne la surface du cercle de ce rayon.</li>
-            </ol>
+            </ul>
         <p>Afficher ensuite le résultat de l'appel à cette fonction en cliquant sur un bouton.</p>
     <p><a href="Ex02.html">Clic-me for Exo2 Html</a></p>
+    <!--?*Exo 3-->
+    <h2>Exercice 3 - écriture d'une fonction avec arguments</h2>
+            <ol>
+                <li>Créez deux variables globales a et b, initialisées respectivement à 3 et à 2.</li>
+                <li>Créez une fonction triple prenant un argument x et renvoyant le résultat de la multiplication de x par 3</li>
+                <li>Créez une fonction affiche, appelée au clic sur un bouton, qui affiche dans des boîtes d'alerte successivement le résultat de triple appliquée à a, puis à b.</li>
+            </ol>
+    <p><a href="Ex03.html">Clic-me for Exo3 Html</a></p>
+    <!--?*Exo 4-->
+    <h2>Exercice 4 - utilisation d'un tableau</h2>
+        <ol>
+            <li>Créez un tableau nommé tab dont le premier élément est -2, le deuxième 1 et le troisième 4</li>
+            <li>Créez une fonction additionne prenant un argument x et renvoyant le résultat de l'addition de x à 2</li>
+            <li>Créez une fonction affiche, appelée au clic sur un bouton, qui affiche dans des boîtes d'alerte successivement le résultat de additionne appliqué au premier élément, puis au dernier élément du tableau (en utilisant la propriété length).</li>
+        </ol>
+    <p><a href="EX04.html">Clic-me for Exo4 Html</a></p>
+    <!--?*Exo 5-->
+    <h2>Exercice 5 - manipulation des opérateurs</h2>
+        <p>b est toujours initialisée à 2 Quel est le résultat des opérations suivantes ?</p>
+        <ul>
+            <li>a=b++;</li>
+            <li>a=++b;</li>
+            <li>a=b--;</li>
+            <li>a=--b;</li>
+            <li>a+=b++;</li>
+            <li>a=1; a+=++b;</li>
+            <li>a=1; a-=b++;</li>
+            <li>a=1; a-=++b;</li>
+            <li>a=1; a+=b--;</li>
+            <li>a=1; a+=--b;</li>
+        </ul>
+    <p>Pour chacune des opérations, afficher l'opération effectuée, la valeur de a après l'opération et la valeur de b après l'opération.</p>
+    <p><a href="Ex05.html">Cliv-me for Exo 5 Html</a></p>
 </body>
 </html>
