--- a/Ex05.html
+++ b/Ex05.html
@@ -7,6 +7,15 @@
     <title>Exo 5</title>
 </head>
 <body>
+    <style>
+        h1{
+            text-align: center;
+        }
+        button{
+            margin-right: 50%;
+            margin-left: 50%;
+        }
+    </style>
     <h1>Exo 5</h1>
     <button id="run">clic</button>
     <p><a href="index_base2.html">Retour base 2</a></p>
