--- a/index_base2.html
+++ b/index_base2.html
@@ -57,5 +57,12 @@
         </ul>
     <p>Pour chacune des opérations, afficher l'opération effectuée, la valeur de a après l'opération et la valeur de b après l'opération.</p>
     <p><a href="Ex05.html">Cliv-me for Exo 5 Html</a></p>
+    <!--?*Exo 6-->
+    <h2>Exercice 6 - appel à une fonction retournant une valeur</h2>
+        <ol>
+            <li>Créez un tableau nommé tab dont le premier élément est -2, le deuxième 1 et le troisième 4</li>
+            <li>Créez une fonction soustrait prenant un argument x et renvoyant le résultat de la soustraction de x-2 si x est positif ou nul, sinon renvoyer la chaîne de caractères "Nombre négatif!".</li>
+            <li>Créez une fonction affiche, appelée au clic sur le bouton, qui affiche dans des boîtes d'alerte successivement le résultat de soustrait appliqué au premier élément, puis au dernier élément du tableau (en utilisant la propriété length).</li>
+        </ol>
 </body>
 </html>
