--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 <button  id="valider1">Valider</button>
             </form>
             <p id="p"></p>
-    <!--todoEXO6-->
-    <!--todo bien lier mais ne recupere pas les chiffres-->
+    <!--?*EXO6-->
     <h2>Exercice 6</h2>
         <p>Dans un fichier séparé, créer une fonction permettant d’afficher le reste de leur division. L’appeler depuis le fichier html.</p>
         <form>
