--- a/index_base2.html
+++ b/index_base2.html
@@ -65,5 +65,25 @@
             <li>Créez une fonction soustrait prenant un argument x et renvoyant le résultat de la soustraction de x-2 si x est positif ou nul, sinon renvoyer la chaîne de caractères "Nombre négatif!".</li>
             <li>Créez une fonction affiche, appelée au clic sur le bouton, qui affiche dans des boîtes d'alerte successivement le résultat de soustrait appliqué au premier élément, puis au dernier élément du tableau (en utilisant la propriété length).</li>
         </ol>
+    <p><a href="Ex06.html">Cliv-me for Exo 6 Html</a></p>
+    <!--?*Exo 7-->
+    <h2>Exercice 7 - utilisation de switch</h2>
+        <p>Créer un bouton. Au click de ce bouton, lancer la fonction faireChoix().</p>
+        <p>Cette fonction demande à l'utilisateur au moyen d'un prompt() de choisir entre 1, 2 ou 3.</p>
+        <ul>
+            <li>s'il choisit 1, on affiche avec une boîte d'alerte "1. Merci"</li>
+            <li>s'il choisit 2, on affiche avec une boîte d'alerte "2. Bonjour"</li>
+            <li>s'il choisit 3, on affiche avec une boîte d'alerte "3. Au revoir"</li>
+            <li>s'il choisit autre chose, on affiche avec une boîte d'alerte "Pardon, que voulez-vous ?"</li>
+        </ul>
+        <p><a href="Ex07.html">Cliv-me for Exo 7 Html</a></p>
+    <!--?*Exo 8-->
+    <h2>Exercice 8 - utilisation de switch et de l'objet date</h2>
+        <p>Créer un bouton. Au click de ce bouton, lancer la fonction jourDeLaSemaine(). Cette fonction détermine le jour de la semaine et affiche selon le cas dimanche, lundi, mardi... etc. jusqu'à samedi.</p>
+    <p><a href="Ex08.html">Cliv-me for Exo 8 Html</a></p>
+    <!--Exo 9-->
+    <h2>Exercice 9 - utilisation de la boucle while</h2>
+        <p>Créer un bouton. Au click de ce bouton, lancer la fonction testWhile. Cette fonction demande à l'utilisateur de saisir une chaîne de caractères contenant la lettre p, et le redemande tant que l'utilisateur ne l'a pas fait. Il affiche ensuite la chaîne saisie entre guillemets.</p>
+        <p><a href="Ex09.html">Cliv-me for Exo 9 Html</a></p>
 </body>
 </html>
