--- a/index_base2.html
+++ b/index_base2.html
@@ -85,5 +85,21 @@
     <h2>Exercice 9 - utilisation de la boucle while</h2>
         <p>Créer un bouton. Au click de ce bouton, lancer la fonction testWhile. Cette fonction demande à l'utilisateur de saisir une chaîne de caractères contenant la lettre p, et le redemande tant que l'utilisateur ne l'a pas fait. Il affiche ensuite la chaîne saisie entre guillemets.</p>
         <p><a href="Ex09.html">Cliv-me for Exo 9 Html</a></p>
+    <!--Exo 10-->
+    <h2>Exercice 10 - utilisation de la boucle for</h2>
+        <p>Créer un bouton. Au click de ce bouton, lancer la fonction somme. Cette fonction demande trois fois à l'utilisateur de saisir un nombre et affiche ensuite la somme de ces trois nombres.</p>
+        <p><a href="Ex10.html">Cliv-me for Exo 10 Html</a></p>
+    <!--Exo 11-->
+    <h2>Exercice 11 - utilisation des boucles et tests</h2>
+        <p>Créer un bouton. Au click de ce bouton, lancer la fonction calculMoyenne.Cette fonction va calculer la moyenne des nombres entrés au clavier :</p>
+        <ul>
+            <li>demande à l'utilisateur d'entrer un nombre entier.</li>
+            <li>si l'utilisateur entre autre chose qu'un nombre entier, un message d'alerte signale l'erreur et ensuite, la fonction redemande à l'utilisateur d'entrer un nombre entier.</li>
+            <li>tant que le nombre entré est positif ou nul, la fonction mémorise ce nombre et l'additionne aux autres nombres précédemment entrés.</li>
+            <li>si le nombre est négatif, alors la fonction calcule la moyenne de tous les nombres entrés en divisant la somme totale par le nombre de valeurs entrées.</li>
+            <li>a fonction affiche le nombre de valeurs entrées</li>
+            <li>la fonction affiche la moyenne</li>
+        </ul>
+        <p><a href="Ex11.html">Cliv-me for Exo 11 Html</a></p>
 </body>
 </html>
